--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -9,8 +9,8 @@ html(lang='en')
       script(src='js/html5shiv.min.js')
       script(src='js/respond.min.js')
     // stylesheet
-    link(href='scss/flexslider.css', type='text/css', rel='stylesheet')
     link(href='scss/bootstrap.min.css', type='text/css', rel='stylesheet')
+    link(href="http://cdn.jsdelivr.net/jquery.slick/1.4.1/slick.css", type='text/css', rel='stylesheet')
     link(href='scss/style.css', type='text/css', rel='stylesheet')
   body
     .home-page.page
@@ -128,8 +128,9 @@ html(lang='en')
 
 
     script(src="js/jquery.min.js" type='text/javascript')
-    script(src="js/jquery.flexslider-min.js" type='text/javascript')
-    script(src='js/bootstrap.min.js' type='text/javascript')
+    script(src="http://cdn.jsdelivr.net/jquery.slick/1.4.1/slick.min.js" type='text/javascript')
     script(src='js/jquery.bxslider.min.js' type='text/javascript')
     script(src='js/jquery.slicknav.min.js' type='text/javascript')
+    script(src='js/bootstrap.min.js' type='text/javascript')
     script(src='js/script.js' type='text/javascript')
+
