--- a/jade/scss/style.scss
+++ b/jade/scss/style.scss
@@ -6,6 +6,7 @@ Version:0.1
 @import "_reset";
 @import "_variables";
 @import "_common";
+@import "_slick";
 @import "_icons";
 @import "_fonts";
 @import "_bxslider";
