--- a/html/scss/style.css
+++ b/html/scss/style.css
@@ -58,12 +58,12 @@ table {
 
 /* line 1, ../../jade/scss/_common.scss */
 html {
-  background-color: #ffffff; }
+  background-color: white; }
 
 /* line 4, ../../jade/scss/_common.scss */
 body {
   background-color: #171a1c;
-  color: #ffffff;
+  color: white;
   font-family: "proxima_nova_light";
   font-size: 16px;
   -webkit-text-size-adjust: 100%; }
@@ -125,6 +125,107 @@ select {
 /* line 67, ../../jade/scss/_common.scss */
 .other-page {
   padding: 100px 0 107px; }
+
+/* Slider */
+/* line 2, ../../jade/scss/_slick.scss */
+.slick-slider {
+  position: relative;
+  display: block;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent; }
+
+/* line 23, ../../jade/scss/_slick.scss */
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0; }
+
+/* line 33, ../../jade/scss/_slick.scss */
+.slick-list:focus {
+  outline: none; }
+
+/* line 37, ../../jade/scss/_slick.scss */
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand; }
+
+/* line 43, ../../jade/scss/_slick.scss */
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+
+/* line 53, ../../jade/scss/_slick.scss */
+.slick-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block; }
+
+/* line 61, ../../jade/scss/_slick.scss */
+.slick-track:before,
+.slick-track:after {
+  display: table;
+  content: ''; }
+
+/* line 68, ../../jade/scss/_slick.scss */
+.slick-track:after {
+  clear: both; }
+
+/* line 72, ../../jade/scss/_slick.scss */
+.slick-loading .slick-track {
+  visibility: hidden; }
+
+/* line 77, ../../jade/scss/_slick.scss */
+.slick-slide {
+  display: none;
+  float: left;
+  height: 100%;
+  min-height: 1px; }
+
+/* line 85, ../../jade/scss/_slick.scss */
+[dir='rtl'] .slick-slide {
+  float: right; }
+
+/* line 89, ../../jade/scss/_slick.scss */
+.slick-slide img {
+  display: block; }
+
+/* line 93, ../../jade/scss/_slick.scss */
+.slick-slide.slick-loading img {
+  display: none; }
+
+/* line 97, ../../jade/scss/_slick.scss */
+.slick-slide.dragging img {
+  pointer-events: none; }
+
+/* line 101, ../../jade/scss/_slick.scss */
+.slick-initialized .slick-slide {
+  display: block; }
+
+/* line 105, ../../jade/scss/_slick.scss */
+.slick-loading .slick-slide {
+  visibility: hidden; }
+
+/* line 109, ../../jade/scss/_slick.scss */
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent; }
 
 /* line 1, ../../jade/scss/_icons.scss */
 [class*='iconsp-'] {
@@ -314,7 +415,7 @@ select {
 /* line 99, ../../jade/scss/_bxslider.scss */
 .bx-wrapper .bx-pager.bx-default-pager a:hover,
 .bx-wrapper .bx-pager.bx-default-pager a.active {
-  background: #ffffff; }
+  background: white; }
 
 /* DIRECTION CONTROLS (NEXT / PREV) */
 /* line 106, ../../jade/scss/_bxslider.scss */
@@ -398,7 +499,7 @@ select {
   position: absolute;
   bottom: 0;
   left: 0;
-  background: #666 \9;
+  background: #666666 \9;
   background: rgba(80, 80, 80, 0.75);
   width: 100%; }
 
@@ -618,7 +719,7 @@ select {
   display: none; }
 /* line 27, ../../jade/scss/_layout.scss */
 .page .header {
-  background-color: #ffffff;
+  background-color: white;
   color: #171a1c; }
   /* line 30, ../../jade/scss/_layout.scss */
   .page .header .logo {
@@ -666,7 +767,7 @@ select {
       left: -46px;
       top: 37px;
       background: #1ca5d7;
-      color: #ffffff;
+      color: white;
       text-align: center; }
       /* line 76, ../../jade/scss/_layout.scss */
       .page .header .menu .sub-menu li {
@@ -674,7 +775,7 @@ select {
         display: block; }
         /* line 79, ../../jade/scss/_layout.scss */
         .page .header .menu .sub-menu li:hover {
-          background: #ffffff;
+          background: white;
           -webkit-box-shadow: inset 0px 1px 3px 0px dimgray;
           -moz-box-shadow: inset 0px 1px 3px 0px dimgray;
           box-shadow: inset 0px 1px 3px 0px dimgray; }
@@ -756,7 +857,7 @@ select {
         color: #343434; }
       /* line 165, ../../jade/scss/_layout.scss */
       .page .header .enquire .box-enquire .select-style {
-        background: url(img/btn-dropdown.png) no-repeat 94% #fff;
+        background: url(img/btn-dropdown.png) no-repeat 94% white;
         display: inline-block;
         overflow: hidden;
         vertical-align: middle;
@@ -821,7 +922,7 @@ select {
     /* line 233, ../../jade/scss/_layout.scss */
     .page .header .enquire .btn {
       border-radius: 0;
-      background: #ffffff;
+      background: white;
       width: 150px;
       display: block;
       margin-bottom: 18px;
@@ -840,7 +941,7 @@ select {
       /* line 251, ../../jade/scss/_layout.scss */
       .page .header .enquire .btn.btn-submit {
         background: #1ca5d7;
-        color: #ffffff;
+        color: white;
         font-family: "roboto_condensed_bold";
         font-size: 18px;
         letter-spacing: 1px;
@@ -860,7 +961,7 @@ select {
   background-color: black; }
   /* line 274, ../../jade/scss/_layout.scss */
   .page .footer i {
-    background-color: #ffffff;
+    background-color: white;
     vertical-align: middle;
     margin-right: 40px; }
   /* line 279, ../../jade/scss/_layout.scss */
@@ -1158,7 +1259,7 @@ select {
           width: 0px;
           border-top: 12px solid transparent;
           border-bottom: 12px solid transparent;
-          border-left: 10px solid #ffffff;
+          border-left: 10px solid white;
           right: -10px;
           top: 45%;
           z-index: 1; }
@@ -1223,9 +1324,71 @@ select {
 .services-page h1.title {
   margin: 55px 0 57px 0; }
 /* line 6, ../../jade/scss/_services.scss */
+.services-page .content-pane {
+  font-size: 17.89px;
+  line-height: 25.26px; }
+  /* line 9, ../../jade/scss/_services.scss */
+  .services-page .content-pane h1 {
+    font-size: 25.26px;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+    font-family: "roboto_condensed_bold";
+    line-height: 30px; }
+  /* line 17, ../../jade/scss/_services.scss */
+  .services-page .content-pane .slide-logo .slick-slide {
+    width: 130px !important; }
+  /* line 20, ../../jade/scss/_services.scss */
+  .services-page .content-pane .slide-logo img {
+    width: auto;
+    height: 40px;
+    margin: 0 auto; }
+  /* line 25, ../../jade/scss/_services.scss */
+  .services-page .content-pane .slide-logo button {
+    position: absolute;
+    top: 5px;
+    border: none;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    background: url("img/icon-sprite.png") no-repeat; }
+    /* line 33, ../../jade/scss/_services.scss */
+    .services-page .content-pane .slide-logo button:active, .services-page .content-pane .slide-logo button:focus {
+      outline: none; }
+  /* line 38, ../../jade/scss/_services.scss */
+  .services-page .content-pane .slide-logo .slick-prev {
+    background-position: 0 -115px;
+    left: -15px; }
+  /* line 42, ../../jade/scss/_services.scss */
+  .services-page .content-pane .slide-logo .slick-next {
+    background-position: -20px -115px;
+    right: -15px; }
+  /* line 47, ../../jade/scss/_services.scss */
+  .services-page .content-pane .img_thumnail {
+    width: 370px;
+    float: right;
+    margin-left: 35px; }
+  /* line 53, ../../jade/scss/_services.scss */
+  .services-page .content-pane ul {
+    list-style: inherit; }
+    /* line 55, ../../jade/scss/_services.scss */
+    .services-page .content-pane ul li {
+      margin-bottom: 25px; }
+  /* line 59, ../../jade/scss/_services.scss */
+  .services-page .content-pane .image-content {
+    list-style: none;
+    float: right;
+    width: 371px;
+    margin-left: 35px; }
+  /* line 65, ../../jade/scss/_services.scss */
+  .services-page .content-pane .title-brand-product {
+    font-size: 14.06px;
+    color: #9c9c9c;
+    margin: 44px 0 21px 0;
+    font-style: italic; }
+/* line 72, ../../jade/scss/_services.scss */
 .services-page .services-list {
   margin-bottom: 60px; }
-  /* line 8, ../../jade/scss/_services.scss */
+  /* line 74, ../../jade/scss/_services.scss */
   .services-page .services-list li {
     background: #1ca5d7;
     display: inline-block;
@@ -1235,7 +1398,7 @@ select {
     border: 0;
     margin-left: 0;
     position: relative; }
-    /* line 18, ../../jade/scss/_services.scss */
+    /* line 84, ../../jade/scss/_services.scss */
     .services-page .services-list li.active .traingle {
       position: absolute;
       background-image: url("../images/traingle-gray.png");
@@ -1246,22 +1409,22 @@ select {
       z-index: 9;
       background-size: 100%;
       left: 0; }
-    /* line 29, ../../jade/scss/_services.scss */
+    /* line 95, ../../jade/scss/_services.scss */
     .services-page .services-list li.active a {
       background-image: url(img/bg-gray.png);
       color: #1ca5d7; }
-    /* line 34, ../../jade/scss/_services.scss */
+    /* line 100, ../../jade/scss/_services.scss */
     .services-page .services-list li a {
       padding: 0;
       border-radius: 0; }
-      /* line 37, ../../jade/scss/_services.scss */
+      /* line 103, ../../jade/scss/_services.scss */
       .services-page .services-list li a:hover {
         background-image: url(img/bg-gray.png);
         color: #1ca5d7; }
-    /* line 42, ../../jade/scss/_services.scss */
+    /* line 108, ../../jade/scss/_services.scss */
     .services-page .services-list li:last-child {
       margin-right: 0; }
-  /* line 46, ../../jade/scss/_services.scss */
+  /* line 112, ../../jade/scss/_services.scss */
   .services-page .services-list h4.sub-title {
     text-align: center;
     text-transform: uppercase;
@@ -1270,26 +1433,26 @@ select {
     display: table;
     width: 100%;
     position: relative; }
-    /* line 54, ../../jade/scss/_services.scss */
+    /* line 120, ../../jade/scss/_services.scss */
     .services-page .services-list h4.sub-title span {
       display: table-cell;
       vertical-align: middle; }
-/* line 60, ../../jade/scss/_services.scss */
+/* line 126, ../../jade/scss/_services.scss */
 .services-page .services-list-content > .tab-pane.active {
   display: inline-block;
   color: #171a1c;
-  background: #ffffff;
-  padding: 40px 24px;
+  background: white;
+  padding: 40px 40px 40px 24px;
   width: 100%; }
-  /* line 69, ../../jade/scss/_services.scss */
+  /* line 135, ../../jade/scss/_services.scss */
   .services-page .services-list-content > .tab-pane.active ul li.active a {
     background-image: url("img/bg-gray.png");
     color: #1ca5d7; }
-  /* line 74, ../../jade/scss/_services.scss */
+  /* line 140, ../../jade/scss/_services.scss */
   .services-page .services-list-content > .tab-pane.active ul li a {
     padding: 15px 0px;
     display: inline-block;
-    color: #ffffff;
+    color: white;
     background: #1ca5d7;
     text-transform: uppercase;
     font-size: 17.89px;
@@ -1300,7 +1463,7 @@ select {
     margin-bottom: 10px;
     width: 172px;
     text-align: center; }
-  /* line 92, ../../jade/scss/_services.scss */
+  /* line 158, ../../jade/scss/_services.scss */
   .services-page .services-list-content > .tab-pane.active .tab-content .dot {
     display: inline-block;
     font-size: 80px;
@@ -1310,7 +1473,7 @@ select {
     margin-top: -12px;
     margin-right: 10px;
     vertical-align: top; }
-  /* line 102, ../../jade/scss/_services.scss */
+  /* line 168, ../../jade/scss/_services.scss */
   .services-page .services-list-content > .tab-pane.active .tab-content p {
     display: inline-block;
     width: 85%;
@@ -1319,17 +1482,14 @@ select {
     line-height: 25.56px;
     letter-spacing: 0;
     color: black; }
-  /* line 113, ../../jade/scss/_services.scss */
-  .services-page .services-list-content > .tab-pane.active .tab-content .tab-pane.active ul li {
-    margin-bottom: 25px; }
-  /* line 118, ../../jade/scss/_services.scss */
+  /* line 178, ../../jade/scss/_services.scss */
   .services-page .services-list-content > .tab-pane.active .tab-content .image-content {
     text-align: center; }
-    /* line 120, ../../jade/scss/_services.scss */
+    /* line 180, ../../jade/scss/_services.scss */
     .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators {
       bottom: 2px !important;
       left: 77%; }
-      /* line 123, ../../jade/scss/_services.scss */
+      /* line 183, ../../jade/scss/_services.scss */
       .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators li {
         height: 16px;
         width: 16px;
@@ -1337,10 +1497,10 @@ select {
         background: #1ca5d7;
         border: none;
         margin: 16px; }
-        /* line 130, ../../jade/scss/_services.scss */
+        /* line 190, ../../jade/scss/_services.scss */
         .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators li.active {
-          background: #ffffff; }
-    /* line 135, ../../jade/scss/_services.scss */
+          background: white; }
+    /* line 195, ../../jade/scss/_services.scss */
     .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-caption {
       left: 0;
       width: 100%;
@@ -1348,79 +1508,19 @@ select {
       padding: 14px 0 24px 22px;
       text-align: left;
       font-size: 15.33px;
-      color: #ffffff;
+      color: white;
       font-family: "roboto_condensed_bold";
       background-color: rgba(0, 0, 0, 0.6); }
-      /* line 145, ../../jade/scss/_services.scss */
+      /* line 205, ../../jade/scss/_services.scss */
       .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-caption span {
         display: block;
         font-family: "roboto_condensed_light";
         margin-top: 2px; }
-/* line 157, ../../jade/scss/_services.scss */
-.services-page .services-list-content #catering-equipment .tab-pane.active .text-content li {
-  margin-bottom: 0; }
-  /* line 159, ../../jade/scss/_services.scss */
-  .services-page .services-list-content #catering-equipment .tab-pane.active .text-content li:first-child {
-    margin-bottom: 22px; }
-    /* line 161, ../../jade/scss/_services.scss */
-    .services-page .services-list-content #catering-equipment .tab-pane.active .text-content li:first-child .dot {
-      opacity: 0; }
-  /* line 165, ../../jade/scss/_services.scss */
-  .services-page .services-list-content #catering-equipment .tab-pane.active .text-content li:last-child {
-    margin-top: 32px;
-    margin-bottom: 6px; }
-    /* line 168, ../../jade/scss/_services.scss */
-    .services-page .services-list-content #catering-equipment .tab-pane.active .text-content li:last-child .dot {
-      opacity: 0; }
-    /* line 171, ../../jade/scss/_services.scss */
-    .services-page .services-list-content #catering-equipment .tab-pane.active .text-content li:last-child p {
-      font-family: "proxima_nova_light";
-      font-size: 14.06px;
-      color: #9c9c9c;
-      font-style: italic; }
-/* line 179, ../../jade/scss/_services.scss */
-.services-page .services-list-content #catering-equipment .tab-pane.active .text-content h2.title {
-  font-family: "roboto_condensed_bold";
-  font-size: 25.56px;
-  color: black;
-  text-transform: uppercase;
-  display: inline-block;
-  width: 90%;
-  letter-spacing: 0.5px;
-  line-height: 32px; }
-/* line 191, ../../jade/scss/_services.scss */
+/* line 217, ../../jade/scss/_services.scss */
 .services-page .services-list-content #catering-equipment .tab-pane.active#catering-one .image-content img {
   width: auto;
   position: relative;
   top: 115px; }
-/* line 198, ../../jade/scss/_services.scss */
-.services-page .services-list-content #catering-equipment .tab-pane.active .slide-logo .slick-slide {
-  width: 130px !important; }
-/* line 201, ../../jade/scss/_services.scss */
-.services-page .services-list-content #catering-equipment .tab-pane.active .slide-logo img {
-  width: auto;
-  height: auto;
-  margin: 0 auto; }
-/* line 206, ../../jade/scss/_services.scss */
-.services-page .services-list-content #catering-equipment .tab-pane.active .slide-logo button {
-  position: absolute;
-  top: 5px;
-  border: none;
-  display: inline-block;
-  height: 20px;
-  width: 20px;
-  background: url("img/icon-sprite.png") no-repeat; }
-  /* line 214, ../../jade/scss/_services.scss */
-  .services-page .services-list-content #catering-equipment .tab-pane.active .slide-logo button:active, .services-page .services-list-content #catering-equipment .tab-pane.active .slide-logo button:focus {
-    outline: none; }
-/* line 219, ../../jade/scss/_services.scss */
-.services-page .services-list-content #catering-equipment .tab-pane.active .slide-logo .slick-prev {
-  background-position: 0 -115px;
-  left: -15px; }
-/* line 223, ../../jade/scss/_services.scss */
-.services-page .services-list-content #catering-equipment .tab-pane.active .slide-logo .slick-next {
-  background-position: -20px -115px;
-  right: -15px; }
 
 @media only screen and (max-width: 1217px) {
   /* line 2, ../../jade/scss/_responsive.scss */
@@ -1442,14 +1542,14 @@ select {
     position: relative;
     z-index: 1;
     vertical-align: top;
-    background-color: #ffffff;
+    background-color: white;
     padding: 5px 0; }
     /* line 22, ../../jade/scss/_responsive.scss */
     .slicknav_menu .slicknav_icon {
       margin: 0; }
     /* line 25, ../../jade/scss/_responsive.scss */
     .slicknav_menu .slicknav_btn {
-      background-color: #ffffff;
+      background-color: white;
       float: left;
       margin: 0;
       padding-left: 25px; }
@@ -1508,7 +1608,7 @@ select {
       /* line 83, ../../jade/scss/_responsive.scss */
       .slicknav_menu .slicknav_nav a:hover {
         background: none;
-        color: #ffffff; }
+        color: white; }
       /* line 87, ../../jade/scss/_responsive.scss */
       .slicknav_menu .slicknav_nav a .slicknav_arrow {
         display: none; }
@@ -1765,5 +1865,3 @@ select {
     /* line 354, ../../jade/scss/_responsive.scss */
     .home-page .testimonials .bx-pager {
       bottom: -20px; } }
-
-/*# sourceMappingURL=style.css.map */
