--- a/html/scss/style.css
+++ b/html/scss/style.css
@@ -1522,6 +1522,32 @@ select {
   position: relative;
   top: 115px; }
 
+/* line 2, ../../jade/scss/_portfolio.scss */
+.portfolio-page .portfolio-slider {
+  margin: 70px 0 85px; }
+  /* line 4, ../../jade/scss/_portfolio.scss */
+  .portfolio-page .portfolio-slider li {
+    display: inline-block;
+    background: #fff;
+    width: 170px;
+    height: 170px;
+    text-align: center;
+    vertical-align: middle; }
+    /* line 11, ../../jade/scss/_portfolio.scss */
+    .portfolio-page .portfolio-slider li img {
+      height: auto;
+      width: 100px; }
+/* line 18, ../../jade/scss/_portfolio.scss */
+.portfolio-page .portfolio-content {
+  background: #fff; }
+/* line 22, ../../jade/scss/_portfolio.scss */
+.portfolio-page ul.portfolio-content-detail-slider {
+  width: 370px; }
+/* line 26, ../../jade/scss/_portfolio.scss */
+.portfolio-page .portfolio-content-detail {
+  margin: 40px 50px 50px 0;
+  color: #000000; }
+
 @media only screen and (max-width: 1217px) {
   /* line 2, ../../jade/scss/_responsive.scss */
   body {
